JOORSAND/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Counter__c</fullName>
        <description>For reporting. Look up &quot;Power of One&quot; Salesforce articles.</description>
        <formula>1</formula>
        <label>Account Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Source_From_Lead__c</fullName>
        <description>Backend field to receive Lead Source from the Lead and fire a Process Builder to fill in Account Source. Salesforce doesn&apos;t allow you to map to Account Source form converted Leads natively.</description>
        <label>Account Source From Lead</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountowner__c</fullName>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_ARR__c</fullName>
        <description>Rolls up the ARR for all open Renewal Opportunities which reflect the currently contracted ARR.</description>
        <inlineHelpText>Current ARR under contract.</inlineHelpText>
        <label>Contracted ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adoption_Rate__c</fullName>
        <description>Subjectively entered by the CSM to indicate how well the customer is adopting the platform.</description>
        <inlineHelpText>How well is the customer adopting the platform?</inlineHelpText>
        <label>Adoption Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Bucket__c</fullName>
        <description>The revenue bucket the Account falls into for segmentation.</description>
        <inlineHelpText>SMB = 0-50M
MM = 51-500M
ENT = 500M+</inlineHelpText>
        <label>Annual Revenue Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backend_System__c</fullName>
        <description>The backend system the Account uses.</description>
        <inlineHelpText>Which backend system does this Account use?</inlineHelpText>
        <label>Backend System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A2000</fullName>
                </value>
                <value>
                    <fullName>AccuPOS</fullName>
                </value>
                <value>
                    <fullName>Aims</fullName>
                </value>
                <value>
                    <fullName>ApparelMagic Cloud</fullName>
                </value>
                <value>
                    <fullName>ApparelMagic Desktop</fullName>
                </value>
                <value>
                    <fullName>Authorize.NET</fullName>
                </value>
                <value>
                    <fullName>BlueBox Logistics</fullName>
                </value>
                <value>
                    <fullName>Blue Cherry</fullName>
                </value>
                <value>
                    <fullName>Booker</fullName>
                </value>
                <value>
                    <fullName>CAM Commerce</fullName>
                </value>
                <value>
                    <fullName>CAP Sellwise</fullName>
                </value>
                <value>
                    <fullName>Cegid</fullName>
                    <label>CEGID - OrliWeb</label>
                </value>
                <value>
                    <fullName>Celerant</fullName>
                </value>
                <value>
                    <fullName>Cin7</fullName>
                </value>
                <value>
                    <fullName>CloverStation</fullName>
                </value>
                <value>
                    <fullName>CounterPoint</fullName>
                </value>
                <value>
                    <fullName>easyPOS</fullName>
                </value>
                <value>
                    <fullName>EVO</fullName>
                </value>
                <value>
                    <fullName>Fastmag</fullName>
                    <label>FastMag</label>
                </value>
                <value>
                    <fullName>FullCircle</fullName>
                </value>
                <value>
                    <fullName>FusionPOS</fullName>
                </value>
                <value>
                    <fullName>ILG</fullName>
                </value>
                <value>
                    <fullName>Impuls</fullName>
                </value>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>JDEdwards</fullName>
                </value>
                <value>
                    <fullName>Just Fashion</fullName>
                </value>
                <value>
                    <fullName>KeyStroke</fullName>
                </value>
                <value>
                    <fullName>Left Foot Software</fullName>
                </value>
                <value>
                    <fullName>LightSpeed</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Category__c</fullName>
        <description>To segment Accounts between Brands, Retailers, and Backend Systems.</description>
        <inlineHelpText>Is this Account a Brand, Retailer or Backend System?</inlineHelpText>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Backend System</fullName>
                    <label>Partnership</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSM_Support__c</fullName>
        <description>The CSM subjectively enters the level of support they&apos;re giving this Account.</description>
        <inlineHelpText>How much CSM support is this client receiving?</inlineHelpText>
        <label>CSM Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Source_From_Lead__c</fullName>
        <description>Because Competitor Source is a controlled picklist based on Account Source, it cannot map a value to it on conversion because the Account Source isn&apos;t technically Competitor yet, it need to set and then fire. This field receives Competitor Source instead of the main field, and then a Process Builder updates that field after the fact.</description>
        <label>Competitor Source From Lead</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Source__c</fullName>
        <description>Dependent on Account Source being &quot;Competitor&quot;.</description>
        <inlineHelpText>Input when the Account Source is Competitor.</inlineHelpText>
        <label>Competitor Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NuOrder</fullName>
                </value>
                <value>
                    <fullName>Le New Black</fullName>
                </value>
                <value>
                    <fullName>Ordre</fullName>
                </value>
                <value>
                    <fullName>Anatwine</fullName>
                </value>
                <value>
                    <fullName>Pepperi</fullName>
                </value>
                <value>
                    <fullName>Brandboom</fullName>
                </value>
                <value>
                    <fullName>Brandlab</fullName>
                </value>
                <value>
                    <fullName>INTURN</fullName>
                </value>
                <value>
                    <fullName>Monkey N Middle</fullName>
                </value>
                <value>
                    <fullName>Pop Market</fullName>
                </value>
                <value>
                    <fullName>Threadvine</fullName>
                </value>
                <value>
                    <fullName>Uppler</fullName>
                </value>
                <value>
                    <fullName>World on a Hanger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Competitor selected by person who recycled the account. Indicates who we lost to in a deal, or who someone we cold outbounded said they&apos;re working with already.</description>
        <inlineHelpText>Competitor selected by the person who recycled the Account last.</inlineHelpText>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-- None --</fullName>
                </value>
                <value>
                    <fullName>NuOrder</fullName>
                </value>
                <value>
                    <fullName>Le New Black</fullName>
                </value>
                <value>
                    <fullName>Ordre</fullName>
                </value>
                <value>
                    <fullName>Anatwine</fullName>
                </value>
                <value>
                    <fullName>Pepperi</fullName>
                </value>
                <value>
                    <fullName>Brandboom</fullName>
                </value>
                <value>
                    <fullName>Brandlab</fullName>
                </value>
                <value>
                    <fullName>INTURN</fullName>
                </value>
                <value>
                    <fullName>Monkey N Middle</fullName>
                </value>
                <value>
                    <fullName>Pop Market</fullName>
                </value>
                <value>
                    <fullName>Threadvine</fullName>
                </value>
                <value>
                    <fullName>Uppler</fullName>
                </value>
                <value>
                    <fullName>World on a Hanger</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Goal__c</fullName>
        <description>The ideal contract value based on size of the Account.</description>
        <inlineHelpText>The ideal contract value based on size of the Account.</inlineHelpText>
        <label>Contract Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_From_Convert_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mapped from Lead field Lead Checkbox. Indicates Accounts created by Lead Conversions.</description>
        <label>Created From Convert Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting. Checked off whenever an Account becomes a customer and stays checked FOREVER. This allows reporting on past customers regardless of their current status.</description>
        <label>Customer Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Start_Date__c</fullName>
        <description>The date this customer&apos;s original contract started.</description>
        <inlineHelpText>The date this customer&apos;s original contract started.</inlineHelpText>
        <label>Customer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The CSM assigned to the Account.</description>
        <inlineHelpText>The CSM assigned to the Account.</inlineHelpText>
        <label>Customer Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Services_Support__c</fullName>
        <description>Data Services team subjectively enters the amount of data services support they gave this client.</description>
        <inlineHelpText>How much data services support is this client receiving?</inlineHelpText>
        <label>Data Services Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates Accounts signed up for and using the JOOR platform on a free basis.</description>
        <inlineHelpText>Account is using JOOR, but only the free version.</inlineHelpText>
        <label>Free Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Interest_Date__c</fullName>
        <description>Indicates the date Accounts that have not moved forward or churned would like to re-engage in the future. Fed data from Lost Opportunities or Recycle Account button process. Paired with Future Interest when that field&apos;s value is &quot;Yes&quot;.</description>
        <inlineHelpText>The date this Account would like to reconnect about working with JOOR.</inlineHelpText>
        <label>Future Interest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Interest__c</fullName>
        <description>Indicates whether or not Accounts that have not moved forward or churned have an interest in the future. Fed data from Lost Opportunities or Recycle Account button process. Paired with Future Interest Date when the value is &quot;Yes&quot;.</description>
        <inlineHelpText>Does this Account have future interest in working with JOOR?</inlineHelpText>
        <label>Future Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HighRise_ID__c</fullName>
        <description>ID from legacy CRM HighRise.</description>
        <label>HighRise ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Integration Manager assigned to the Account.</description>
        <inlineHelpText>The Integration Manager assigned to the Account.</inlineHelpText>
        <label>Integration Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Support__c</fullName>
        <description>The Integration Manager subjectively enters the amount of integration support they gave this client.</description>
        <inlineHelpText>How much integration support is this client receiving?</inlineHelpText>
        <label>Integration Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <description>Indicates how the client is integrating their product catalogue.</description>
        <inlineHelpText>How is this client integrating their product catalogue?</inlineHelpText>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat File</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <description>The integrations this customer is using.</description>
        <inlineHelpText>Which integrations is this customer using?</inlineHelpText>
        <label>Integration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Styles</fullName>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Size Curves</fullName>
                </value>
                <value>
                    <fullName>Budgets</fullName>
                </value>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Assortments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JOOR_GMV__c</fullName>
        <description>JOOR Gross Merchandise Value</description>
        <inlineHelpText>JOOR Gross Merchandise Value</inlineHelpText>
        <label>JOOR GMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JOOR_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This Account&apos;s ID in the JOOR Platform.</description>
        <inlineHelpText>This Account&apos;s ID in the JOOR Platform.</inlineHelpText>
        <label>JOOR ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JOOR_Pays_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if JOOR has an agreement with the partner that involves payments made to the partner from JOOR.</description>
        <inlineHelpText>Does JOOR pay this partner in the agreement?</inlineHelpText>
        <label>JOOR Pays Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates an Account that is considered of high importance.</description>
        <inlineHelpText>Checked off on Accounts important to JOOR&apos;s business.</inlineHelpText>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCV__c</fullName>
        <description>Rolls up the TCV all-time for any won deal. Shows how much the customer has been worth to the company in its lifetime.</description>
        <inlineHelpText>Lifetime Customer Value</inlineHelpText>
        <label>LCV</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>Date of the last completed activity.</description>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifetime_Service_Minutes__c</fullName>
        <description>Roll up summary of the Minutes Spent on all Closed Cases on the Account.</description>
        <inlineHelpText>The lifetime number of minutes that have been spent servicing this Account.</inlineHelpText>
        <label>Lifetime Service Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <description>Link to the Account&apos;s LinkedIn page.</description>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Next_Renewal_Date__c</fullName>
        <description>Roll up summary of the Contract Start Date of the next Renewal. Min Contract Start Date for all open renewals.</description>
        <inlineHelpText>When is this Account up for renewal?</inlineHelpText>
        <label>Next Renewal Date</label>
        <summarizedField>Opportunity.Contract_Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>Pulls the region from the User the Account Owner is referencing. For displaying on page layouts and in reports.</description>
        <formula>TEXT(Owner.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>Pulls the role from the User the Account Owner is referencing. For displaying on page layouts and in reports.</description>
        <formula>Owner.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting. Checked off whenever an Account becomes a partner and stays checked FOREVER. This allows reporting on past partners regardless of their current status.</description>
        <label>Partnership Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partnership_Start_Date__c</fullName>
        <description>The date this partner signed a partnership agreement.</description>
        <inlineHelpText>The date this partner signed a partnership agreement.</inlineHelpText>
        <label>Partnership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>Indicates how much JOOR is paying the partner Account.</description>
        <inlineHelpText>How much is JOOR paying this partner?</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>The type of payment JOOR is making to the partner Account.</description>
        <inlineHelpText>Is the payment a one time fee or a recurring fee?</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>JOOR_Pays_Partner__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring Payment</fullName>
                </value>
                <value>
                    <fullName>One Time Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recycled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated by whoever loses the opportunity (new business or renewal churn), OR whoever clicks the &quot;Recycle Account&quot; custom button when outreach is unsuccessful.</description>
        <inlineHelpText>The person who recycled the Account.</inlineHelpText>
        <label>Recycled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recycled_Date_Time__c</fullName>
        <description>Automatically populated with the date/time when an opportunity is lost (new business or renewal churn), OR when someone clicks the &quot;Recycle Account&quot; custom button when outreach is unsuccessful.</description>
        <inlineHelpText>When the Account was recycled.</inlineHelpText>
        <label>Recycled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recycled_Notes__c</fullName>
        <description>Manually entered in visual workflow (triggered by clicking &quot;Recycle Account&quot; custom button) when outreach is unsuccessful, OR automatically pulled from lost opportunity (new business or renewal churn).</description>
        <inlineHelpText>What happened when this Account was last recycled?</inlineHelpText>
        <label>Recycled Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who initially sold the account -- updated automatically when new business deal is won by transferring opp owner to this lookup field.</description>
        <inlineHelpText>Who sold in the Account?</inlineHelpText>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <description>Returns an icon to go with the Account&apos;s Status for easy visual recognition.</description>
        <formula>IF(
Free_Customer__c = FALSE,

CASE(TEXT(Status__c),
&quot;Recycled&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPK&quot;, &quot;Recycled&quot;),
&quot;Outreach - Fresh&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSOq&quot;,&quot;Outreach - Fresh&quot;),
&quot;Outreach - Stale&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPP&quot;,&quot;Outreach - Stale&quot;, 32, 32),
&quot;Open Opportunity&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSOv&quot;,&quot;Open Opportunity&quot;),
&quot;Customer - Partner&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSP0&quot;,&quot;Customer - Partner&quot;),
&quot;Customer - Paying&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSP5&quot;,&quot;Customer - Paying&quot;),
&quot;*Unhandled Status Value*&quot;),

CASE(TEXT(Status__c),
&quot;Recycled&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPK&quot;, &quot;Recycled&quot;)
&amp;&quot; &quot;&amp;IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPU&quot;,&quot;Customer - Free&quot;, 32, 32),
&quot;Outreach - Fresh&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSOq&quot;,&quot;Outreach - Fresh&quot;)
&amp;&quot; &quot;&amp;IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPU&quot;,&quot;Customer - Free&quot;, 32, 32),
&quot;Outreach - Stale&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPP&quot;,&quot;Outreach - Stale&quot;, 32, 32)
&amp;&quot; &quot;&amp;IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPU&quot;,&quot;Customer - Free&quot;, 32, 32),
&quot;Open Opportunity&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSOv&quot;,&quot;Open Opportunity&quot;)
&amp;&quot; &quot;&amp;IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPU&quot;,&quot;Customer - Free&quot;, 32, 32),
&quot;Customer - Partner&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSP0&quot;,&quot;Customer - Partner&quot;)
&amp;&quot; &quot;&amp;IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPU&quot;,&quot;Customer - Free&quot;, 32, 32),
&quot;Customer - Paying&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSP5&quot;,&quot;Customer - Paying&quot;)
&amp;&quot; &quot;&amp;IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPU&quot;,&quot;Customer - Free&quot;, 32, 32),
&quot;*Unhandled Status Value*&quot;)
)</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Reflects the current status of the Account. Adjusted automatically via workflows.</description>
        <inlineHelpText>Recycled = Not Being Worked
Outreach - Fresh = Recent Activity
Outreach - Stale = No Activity in 14 days

Rest are self explanatory.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recycled</fullName>
                    <default>true</default>
                    <label>Recycled</label>
                </value>
                <value>
                    <fullName>Outreach - Fresh</fullName>
                </value>
                <value>
                    <fullName>Outreach - Stale</fullName>
                </value>
                <value>
                    <fullName>Open Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer - Paying</fullName>
                </value>
                <value>
                    <fullName>Customer - Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRX_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to allow for reporting on remaining transnational accounts</description>
        <inlineHelpText>This should be checked for accounts that are not paying an annual fee and instead are Legacy clients paying on a commission rate.</inlineHelpText>
        <label>TRX Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_3_Brands_Retailers_1__c</fullName>
        <description>From web application form. Mapped to from Lead.</description>
        <inlineHelpText>From web application form. Mapped to from Lead.</inlineHelpText>
        <label>Top 3 Brands/Retailers (1)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Brands_Retailers_2__c</fullName>
        <description>From web application form. Mapped to from Lead.</description>
        <inlineHelpText>From web application form. Mapped to from Lead.</inlineHelpText>
        <label>Top 3 Brands/Retailers (2)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Brands_Retailers_3__c</fullName>
        <description>From web application form. Mapped to from Lead.</description>
        <inlineHelpText>From web application form. Mapped to from Lead.</inlineHelpText>
        <label>Top 3 Brands/Retailers (3)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_GMV__c</fullName>
        <description>Total Gross Merchandise Value</description>
        <inlineHelpText>Total Gross Merchandise Value</inlineHelpText>
        <label>Total GMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_from_Lead__c</fullName>
        <description>Backend field to trigger workflow that updates the Account Type standard field. Workaround because you cannot map to the standard Account Type field.</description>
        <label>Type from Lead</label>
        <length>55</length>
        <type>Text</type>
    </fields>
</CustomObject>